--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-saga": "^0.10.5",
     "@types/redux-thunk": "^2.1.0",
+    "elliptic": "^6.5.3",
+    "http-proxy": "^1.18.1",
+    "node-forge": "^0.10.0",
     "node-sass": "^4.0.0",
+    "object-path": "^0.11.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.1.0",
@@ -24,6 +28,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^3.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
