--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hapi/hoek": "^8.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +15,8 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-saga": "^0.10.5",
     "@types/redux-thunk": "^2.1.0",
+    "acorn": "^7.1.1",
+    "dot-prop": "^4.2.1",
     "elliptic": "^6.5.3",
     "http-proxy": "^1.18.1",
     "node-forge": "^0.10.0",
@@ -29,7 +32,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^3.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
