--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dot-prop": "^4.2.1",
     "elliptic": "^6.5.3",
     "http-proxy": "^1.18.1",
+    "moment": "^2.29.1",
     "node-forge": "^0.10.0",
     "node-sass": "^4.0.0",
     "object-path": "^0.11.5",
