--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^24.0.0",
     "@types/node": "^14.14.10",
     "@types/react": "^16.9.0",
@@ -21,6 +22,7 @@
     "@types/redux-saga": "^0.10.5",
     "@types/redux-thunk": "^2.1.0",
     "acorn": "^7.1.1",
+    "classnames": "^2.3.1",
     "dot-prop": "^4.2.1",
     "elliptic": "^6.5.3",
     "http-proxy": "^1.18.1",
